--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    
-    <title>hot tech slide</title>
+    <title>GAP (Gather the presentation)</title>
+    <meta name=”description“ content="GAPでは、プレゼンテーションをTwitterから収集します。" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
