--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">    
-    <title>GAP (Gather the presentation)</title>
-    <meta name=”description“ content="GAPでは、プレゼンテーションをTwitterから収集します。" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>😎</text></svg>">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <title>GAP(Gather the presentation)</title>
+  <meta name=”description“ content="GAP(Gather the presentation)では、プレゼンテーションをTwitterから収集します。" />
+  <meta property="og:title" content="GAP(Gather the presentation)" />
+  <meta property="og:description" content="GAP(Gather the presentation)では、プレゼンテーションをTwitterから収集します。" />
+  <meta property="og:site_name" content="Gather the presentation" />
+  <meta property="og:image" content="https://res.cloudinary.com/silverbirder/image/upload/l_text:Arial_40_bold:GAP%20from%20twitter%0A(Gather%20the%20presentation)/v1625361561/GAP/white.png" />
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
