--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,7 @@
   <meta property="og:description" content="GAP(Gather the presentation)では、プレゼンテーションをTwitterから収集します。" />
   <meta property="og:site_name" content="Gather the presentation" />
   <meta property="og:image" content="https://res.cloudinary.com/silverbirder/image/upload/l_text:Arial_40_bold:GAP%20from%20twitter%0A(Gather%20the%20presentation)/v1625361561/GAP/white.png" />
+  <meta name="google-site-verification" content="s2OnYR9teMjejGbYLSDNPDaodK1kecGGlN76ZPZdS8c" />
 </head>
 
 <body>
