--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <title>GAP(Gather the presentation)</title>
   <meta name=”description“ content="GAP(Gather the presentation)では、プレゼンテーションをTwitterから収集します。" />
   <meta property="og:title" content="GAP(Gather the presentation)" />
   <meta property="og:description" content="GAP(Gather the presentation)では、プレゼンテーションをTwitterから収集します。" />
   <meta property="og:site_name" content="Gather the presentation" />
-  <meta property="og:image" content="https://res.cloudinary.com/silverbirder/image/upload/l_text:Arial_40_bold:GAP%20from%20twitter%0A(Gather%20the%20presentation)/v1625361561/GAP/white.png" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/silverbirder/image/upload/l_text:Arial_40_bold:GAP%20from%20twitter%0A(Gather%20the%20presentation)/v1625361561/GAP/white.png" />
   <meta name="google-site-verification" content="s2OnYR9teMjejGbYLSDNPDaodK1kecGGlN76ZPZdS8c" />
 </head>
 
